Fix navigation on mobile

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -45,13 +45,15 @@ $colour-notification-banner: #ffc107;
     font-size: 100%;
   }
 }
-// Over-ride default indendation.
+// Over-ride default indentation.
 :root {
   p{
     margin-bottom: 0rem;
   }
   ul{
-    margin-bottom: 0rem;
+    // TODO(odow): we should reduce the margin-bottom of lists, except this
+    // disables the drop-down navigation button on mobile.
+    // margin-bottom: 0rem;
     margin-left: 1em;
   }
 }
